<resources>
    <string name="app_name">test</string>

    <!--    MainActivity splash activity -->
    <string name="txtTitleDF">Doctor Found</string>
    <string name="txtDFSlogan">The Best Place To Find Doctors Near You!</string>

    <!--    LoginActivity-->
    <string name="txtTitleLogin">Login</string>
    <string name="hintUsernameLogin">Username</string>
    <string name="hintPassword">Password</string>
    <string name="txtChooseUserSignIn">Choose your User:</string>
    <string-array name="sChooseUserSignIn">
        <item>Patient</item>
        <item>Doctor</item>
        <item>Admin</item>
        <item>Cashier</item>
    </string-array>
    <string name="btnSignIn">Sign In</string>
    <string name="btnSignUp">Sign Up</string>


    <!--    LogoutActivity-->
    <string name="txtTitleLogout">Logout</string>
    <string name="txtSignBackIn">Thank-you for using the Doctor Found App! You can sign back in here if you would like.</string>
    <string name="btnSignBackIn">Sign In</string>
    <string name="imgLogout">Logout Image</string>

    <!--Common button on all home pages at bottom -->
    <string name="btnSignOut">Sign Out</string>
    <string name="btnEditProfile">Edit Profile</string>

    <!--    SignUpActivity or EditProfileActivity-->
    <string name="txtTitleSignUp">Sign Up</string>
    <string name="txtTitleEditProfile">Edit Profile</string>

    <string name="hintUsernameSignUp">Username</string>
    <string name="hintPasswordSignUp">Password</string>
    <string name="hintPasswordConfirmSignUp">Confirm Password</string>

    <string name="txtChooseUserSignUpEdit">Choose the USER you would like to be:</string>
    <string-array name="sChooseUserSignUpEdit">
        <item>Patient</item>
        <item>Doctor</item>
        <item>Admin</item>
        <item>Cashier</item>
    </string-array>

    <string name="txtPersonalInformation">Personal Information:</string>
    <string name="hintFullName">First Name &amp; Last Name</string>
    <string name="txtFullName">Full Name</string>
    <string name="hintPhone">Phone Number (###-###-####)</string>
    <string name="hintEmail">Email</string>
    <string name="hintBirthDay">Birth Date (YYYY MM DD)</string>
    <string name="hintAddress">Address</string>

    <string name="txtForDoctorCashier">Note that the following info is ONLY required for Doctors or Cashiers:</string>
    <string name="txtCertification">Certification:</string>
    <string-array name="spinnerCertification">
        <item>None</item>
        <item>Certificate</item>
        <item>Diploma</item>
        <item>Bachelors Degree</item>
        <item>Masters Degree</item>
        <item>PhD</item>
    </string-array>

    <string name="txtForPatient">Note that the following info is ONLY required for Patients:</string>
    <string name="txtPaymentInformation">Payment Information:</string>
    <string name="txtCreditNumber">Credit/Debit</string>
    <string name="hintCreditNumber">XXXX XXXX XXXX XXXX</string>
    <string name="txtCVV">CVV</string>
    <string name="hintCVV">XXX</string>
    <string name="txtExpiration">Expiration Date</string>
    <string name="hintExpiration">(MM YY)</string>


    <!--    PatientHomePageActivity -->
    <string name="txtTitlePatientHomePage">Welcome to the Patient Home Page</string>
    <string name="imgPatientHomePage">Patient Home Image</string>
    <string name="txtInstructionsHomePage">Please select one of the options below.</string> <!--common for all users-->
    <string name="btnBookAppointment">Book An Appointment Today!</string>
    <string name="btnCheckAppointment">Check Your Upcoming Appointments</string>
    <string name="btnPatientOnlineHelp">Patient Online Help</string>
    <string name="btnSendMessageToDoctor">Send Messages To A Doctor</string>
    <string name="btnViewMessageFromDoctor">View Messages From A Doctor</string>
    <string name="btnViewReminderFromCashier">View Your Reminders From A Cashier</string> <!--common for doctor/patient-->
    <string name="btnViewHistory">View Your User History</string> <!--common for doctor/patient-->

    <!--    DoctorHomePageActivity -->
    <string name="txtTitleDoctorHomePage">Welcome to the Doctor Home Page</string>
    <string name="imgDoctorHomePage">Doctor Home Image</string>
    <string name="btnCheckAppointmentDoctor">Check Your Upcoming Appointments</string>
    <string name="btnSendMessageToPatient">Send Messages To A Patient</string> <!--simply send a message-->
    <string name="btnViewMessageFromPatient">View Messages From A Patient</string> <!--ability to respond, pulls up send message page-->

    <!--    AdminHomePageActivity -->
    <string name="txtTitleAdminHomePage">Welcome to the Admin Home Page</string>
    <string name="imgAdminHomePage">Admin Home Image</string>
    <string name="btnAddPatient">Add Patient</string>
    <string name="btnEditPatient">Edit Patient</string>
    <string name="btnAddDoctor">Add Doctor</string>
    <string name="btnEditDoctor">Edit Doctor</string>
    <string name="btnAddCashier">Add Cashier</string>
    <string name="btnEditCashier">Edit Cashier</string>

    <!--    CashierHomePageActivity -->
    <string name="txtTitleCashierHomePage">Welcome to the Cashier Home Page</string>
    <string name="imgCashierHomePage">Cashier Home Image</string>
    <string name="btnViewSendApptReminder">View All Appointments &amp; Send A Reminder To Doctors and Patients</string> <!--view and send, after click list item-->

    <!-- Some Test Fields(Buttons), Will be deleted in final version -->
    <string name="btnToPatientTEST">To Patient TEST</string>
    <string name="btnToDoctorTEST">To Doctor TEST</string>
    <string name="btnToAdminTEST">To Admin TEST</string>
    <string name="btnToCashierTEST">To Cashier TEST</string>

    <!-- PatientBookAppointment  -->
    <string name="txtba">Book Appointment</string>
    <string name="txtopt1">Eyes and Vision</string>
    <string name="txtopt2">Teeth</string>
    <string name="txtopt4">Others</string>
    <string name="txtopt3">Fever</string>
    <string name="images">imgs</string>
    <string name="spinner">Select a Doctor</string>
    <string name="date">Date Selection</string>
    <string name="time">Time Selection</string>
    <string name="etxtlocation">Enter your City</string>
    <string name="btnbook">Book Appointment</string>
    <string-array name="doctorsname">
        <item>Dr.One</item>
        <item>Dr.Two</item>
        <item>Dr.Three</item>
        <item>Dr.Four</item>
    </string-array>

    <!-- PatientCheckAppointment  -->
    <string name="btncancel">Cancel</string>
    <string name="txtinfo">Appointment info</string>
    <string name="txtcheckapp">Check Appointments</string>
    <string name="txthint">To cancel the appointment, please long click the appointment.</string>

    <!-- PatientOnlineHelp  -->
    <string name="btnsend">Send messages to Doctor</string>
    <string name="btnview">View Messages from Doctor</string>
    <string name="txtonlinehelp">Online Help</string>

    <!-- PatientReminder & DoctorReminder -->
    <string name="txtreminder">Reminder</string>
    <string name="txtreminderinfo">Reminder Information</string>

    <!-- PatientSendMessage & DoctorResponseMessage -->
    <string name="txtsendmessage">Send Message to Doctor</string>
    <string name="etxtdoctorname">Doctor\'s Name</string>
    <string name="etxttitle">Subject</string>
    <string name="etxtinfo">Please describe within 50 words</string>
    <string name="btndiscard">Discard</string>
    <string name="btnrespon">Respond</string>
    <string name="etxtpatientname">Patient\'s Name</string>
    <string name="txtdcresponsemessage">Response Message to patient</string>

    <!-- PatientViewHistory & DoctorViewHistory -->
    <string name="txtviewhistory">View Your History</string>
    <string name="txthistoryinfo">History information</string>

    <!-- PatientViewMessage & DoctorViewMessage -->
    <string name="txtdcmessage">Doctor\'s Message</string>
    <string name="txtviewmessage">View Message from Doctor</string>
    <string name="txtdcviewmessage">View Messages from Patient</string>
    <string name="txtpxmessage">Patient\'s Message</string>
    <string name="txthint1">To respond the message, please click the message.</string>

    <!-- CashierReminder-->
    <string name="textview">Cashier\'s Reminder</string>
    <string name="textview2">Click one of the following appointments to send a reminder to Patient and Doctor</string>

</resources>
