<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#003459"
    android:orientation="vertical"
    tools:context=".PatientSendMessage">

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txtsendmessage"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:fontFamily="serif"></TextView>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#007EA7"></View>

    <EditText
        android:id="@+id/etxtDN"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@android:color/white"
        android:hint="@string/etxtdoctorname"
        android:inputType="text"
        tools:ignore="Autofill"
        app:fontFamily="serif"></EditText>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#007EA7"></View>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@android:color/white"
        android:hint="@string/etxttitle"
        android:inputType="text"
        tools:ignore="Autofill"
        app:fontFamily="serif"></EditText>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#007EA7"></View>

    <EditText
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="206dp"
        android:background="@android:color/white"
        android:hint="@string/etxtinfo"
        android:inputType="text"
        android:gravity="start"
        tools:ignore="Autofill"
        app:fontFamily="serif"></EditText>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#007EA7"></View>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <Button
            android:id="@+id/btnPatientSend"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/btnsend"
            app:fontFamily="serif">

        </Button>

        <Button
            android:id="@+id/btnPatientDiscard"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/btndiscard"
            app:fontFamily="serif"></Button>
    </GridLayout>

</LinearLayout>