<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#003459"
    tools:context=".AdminHomePageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTitleAdminHomePage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/txtTitleAdminHomePage"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            android:textStyle="bold"
            app:fontFamily="serif"
            android:gravity="center"/>

        <View
            android:id="@+id/dAhm1"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#007EA7" />

        <ImageView
            android:id="@+id/imgAdminHomePage"
            android:layout_width="match_parent"
            android:layout_height="333dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/imgAdminHomePage"
            android:gravity="center"
            android:src="@drawable/admin_home_page" />

        <TextView
            android:id="@+id/txtInstructionsAdminHomePage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txtInstructionsHomePage"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textStyle="italic"
            app:fontFamily="serif" />

        <View
            android:id="@+id/dAhm2"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#007EA7" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2">

            <Button
                android:id="@+id/btnAddPatient"
                android:layout_width="175dp"
                android:layout_height="150dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_margin="15dp"
                android:background="#FFFFFF"
                android:text="@string/btnAddPatient"
                android:textSize="30sp"
                android:textStyle="bold"
                app:fontFamily="serif" />

            <Button
                android:id="@+id/btnEditPatient"
                android:layout_width="175dp"
                android:layout_height="150dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_margin="15dp"
                android:background="#FFFFFF"
                android:text="@string/btnEditPatient"
                android:textSize="30sp"
                android:textStyle="bold"
                app:fontFamily="serif" />

            <View
                android:id="@+id/dAhm3"
                android:layout_row="1"
                android:layout_columnSpan="2"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="#007EA7"  />

            <Button
                android:id="@+id/btnAddDoctor"
                android:layout_width="175dp"
                android:layout_height="150dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_margin="15dp"
                android:layout_marginTop="25dp"
                android:background="#FFFFFF"
                android:text="@string/btnAddDoctor"
                android:textSize="30sp"
                android:textStyle="bold"
                app:fontFamily="serif" />

            <Button
                android:id="@+id/btnEditDoctor"
                android:layout_width="175dp"
                android:layout_height="150dp"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_margin="15dp"
                android:layout_marginTop="25dp"
                android:background="#FFFFFF"
                android:text="@string/btnEditDoctor"
                android:textSize="30sp"
                android:textStyle="bold"
                app:fontFamily="serif" />

            <View
                android:id="@+id/dAhm4"
                android:layout_row="3"
                android:layout_columnSpan="2"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="#007EA7"  />

            <Button
                android:id="@+id/btnAddCashier"
                android:layout_width="175dp"
                android:layout_height="150dp"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_margin="15dp"
                android:layout_marginTop="25dp"
                android:background="#FFFFFF"
                android:text="@string/btnAddCashier"
                android:textSize="30sp"
                android:textStyle="bold"
                app:fontFamily="serif" />

            <Button
                android:id="@+id/btnEditCashier"
                android:layout_width="175dp"
                android:layout_height="150dp"
                android:layout_row="4"
                android:layout_column="1"
                android:layout_margin="15dp"
                android:layout_marginTop="25dp"
                android:background="#FFFFFF"
                android:text="@string/btnEditCashier"
                android:textSize="30sp"
                android:textStyle="bold"
                app:fontFamily="serif" />


        </GridLayout>

    </LinearLayout>

</ScrollView>